// kindID 5001
syntax = "proto3";
option go_package = "/game";
package pb;
import "common/baseinfo.proto";
//场景
message ZhaocaimiaoSceneResp{
  int64 timeStamp = 1;              // 时间戳
  string inning = 2;                // 牌局号
  repeated int32 chips = 3;         // 筹 码 [0.03, 0.1, 0.3, 0.9]
  int64 baseBet = 4;                // 基础投注
  PlayerInfo  myInfo = 5;           // 玩家信息
  ZhaocaimiaoOpenResp openInfo = 6; // 开奖信息
}
//状态
// 服务端推送
//(开始)
message ZhaocaimiaoStateStartResp {
  TimeInfo times = 1;
  string inning = 2;               // 牌局号
}
//(下注)
message ZhaocaimiaoStatePlayingResp {
  TimeInfo times = 1;
}
//(开奖)
message ZhaocaimiaoStateOpenResp {
  TimeInfo times = 1;
  ZhaocaimiaoOpenResp openInfo = 2;
}
//游戏消息
//下注  投注总额 = 投注大小 * 投注倍数 * 基础投注
message ZhaocaimiaoBetReq{
  int64 betAmount = 1;          // 投注大小*100
  int32 betRate = 2;            // 投注倍数
}
message ZhaocaimiaoBetResp{
  int64 betScore = 1;          // 投注总额
}
// 网格单元 其中 Element [银框 0x10] [金框 0x20] 占位[两位0x40  三位0x80 四位0x100]
message ZhaocaimiaoCell{
  int32 row = 1;    // 行索引
  int32 col = 2;    // 列索引
  int32 element = 3;// 元素 -1 占位
}
// 消除的单元
message ZhaocaimiaoEraseCell{
  int32 index = 1;                    // 对应第一列的索引
  repeated ZhaocaimiaoCell sames = 2; //
}
// 开奖信息
message ZhaocaimiaoOpenInfo{
  bool isFreeOpen = 1;                      // 是否属于免费开奖
  int64 awardScore = 2;                     // 中奖金额
  int64 awardRate = 3;                      // 中奖倍数
  repeated ZhaocaimiaoCell open = 4;        // 所有
  repeated ZhaocaimiaoEraseCell cells = 5;  // 需消除的元素
}
// 单局中奖的 所有记录
message ZhaocaimiaoOpenResp{
  int64 timeStamp = 1;              // 时间戳
  int32 freeRound = 2;              // 当前免费局数
  int32 allFreeRound = 3;           // 总的免费局数
  int64 totalScore = 4;             // 输赢总额
  string inning = 5;                // 牌局号
  repeated ZhaocaimiaoOpenInfo awards = 6;
}
